--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <a href=/>kokika.to</a>
 </div>
 <nav class=site-header-nav>
-<a href=kokika.to/about/>About</a>
+<a href=https://kokika.to/about/>About</a>
 </nav>
 </header>
 <main>
