--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <a href=https://kokika.to/about/>About</a>
 </nav>
 </header>
-<main>
+<main role=main>
 <article>
 <header class=list-header>
 <h1>Posts</h1>
